style: shift popover pomodoro panel to the outer left space preventing overlap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2453,8 +2453,8 @@ body {
 /* 浮动窗大容器 */
 .pomodoro-popover {
   position: absolute;
-  left: -54px;
-  top: 44px;
+  left: -338px;
+  top: 0px;
   width: 270px;
   padding: 20px;
   background: var(--bg-card);
